# depender

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  Pipfile  README.md  README.rst  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
depender/: __main__.py  cli.py  main.py
depender/backend/: __init__.py  base.py  graphviz.py  matplotlib.py
depender/draw/: base.py  matplotlib.py
depender/graph/: __init__.py  dependency.py  graph.py  layout.py  node.py  render.py  structure.py
depender/parse/: code.py  structure.py  utilities.py
depender/parsers/: code.py  code_parser.py  structure.py  structure_parser.py
depender/render/: __init__.py  dependency.py  render.py  structure.py
depender/templates/: template.html
depender/utilities/: color.py  color_utils.py  graph.py  parsing.py
tests/: conftest.py  test_layout.py
tests/graph/: conftest.py  test_structure_graph.py
tests/graph/graph/: test_graph.py
tests/graph/layout/: conftest.py  test_layout.py
tests/graph/node/: test_node.py
tests/parse/: conftest.py  test_code.py
