[metadata]
name = depender
author = Anes.Benmerzoug
author_email = Anes.Benmerzoug
description = A package that finds the external and internal dependencies in your Python project
			  and draws a directed graph to represent them.
long_description = file: README.md
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages=find:
