[metadata]
name = depender
author = Anes.Benmerzoug
author_email = Anes.Benmerzoug
description = A package that finds the external and internal dependencies in your Python project
			  and draws a directed graph to represent them.
long_description = file: README.md
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3.6
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License

[options]
zip_safe = False
packages=find:

[tool:pytest]
addopts = -v -x --ignore=setup.py --cov=depender tests/

[coverage:run]
omit =
    # Omit init files from coverage
    */__init__.py

[coverage:report]
show_missing = True
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

ignore_errors = True
